--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
+    "additionalFooterText": "ページがキャッシュされており、最新の状態でない場合があります。「ctrl + shift + R」を押すか、観覧履歴の消去後にご覧ください。",
     "useSideMenu": false
 }
